--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
 </header>
 
                                         <!-- HERO IMAGE -->  
-<div class="hero-image">
+<div class="hero-image" id="heroQuery">
   <img class="hero-bg" 
        id="bookmark" 
        src="https://ryecode.github.io/portfolio/ImageBank/heroBG.jpg" 
@@ -118,7 +118,7 @@
                              Tap on the box to read better!
                 </span>
                 <br>
-                Please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. As I share with you things that I experienced along the way, as I took the path to become a full pledged Full-Stack Web Developer. Enjoy!                                               
+                Please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. As I share with you things that I experienced along the way, and take the path to become a full pledged Full-Stack Web Developer. Enjoy!                                               
               </p>  
             </div>
           </div>
@@ -128,7 +128,6 @@
             </a>       
           </div>
         </div>
-
       </div>  
  
       <div class="col-sm-6" 
@@ -275,7 +274,7 @@
       <div class="cardProfile card" 
            id="aboutMe"
            style="position: relative;     
-           margin: 25px 0px 150px 0px;
+           margin: 25px 0px 250px 0px;
            padding: 0;
            background-image: url('https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png');
            background-size: cover;
@@ -293,13 +292,19 @@
             <h3 style=" margin-left: 20px ;
                         margin-right: 20px;
                         font-weight: 900;
+                        font-size: large;
                         color: black;
                         text-shadow: 
                         0 0 0.5em hsl(45, 100%, 53%),
                         0 0 2em hsl(45, 100%, 53%);
                         opacity: 1;">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita? Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi placeat error dolores! Omnis aliquid, at eligendi placeat error dolores! Omnis aliquid, at eligendi  
-            </h3>
+                Greetings I'am Ryan Corral, a former businessman turned call-center agent, and now a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp. 
+              <p>
+                Ever since childhood, I'm already facinated by technology and science. I can pick-up technology very quickly and I'm very comfortable jumping into different platforms and various code bases. My first taste of computers and programming was back in high school. And I always reminisce my very first program I created back then using Turbo Pascal (from Jurassic period haha!). I was able to complete a simple ATM (Automated Teller Machine) program for my finals project. Then in college, I got my second taste of coding for a major project when I coded my RAC (RFID Attendance Checker) program using c++ and used MySQL for database. Back then (like 20 years ago haha!) learning to code only using google to search forums and tutorials was very tiring to many, but for me it was so much fun, and fullfilling!
+                <br>
+                  And now my coding prowess was somewhat updated with the latest programming languages. I'am hoping, I can get a chance to work for a good IT company where I can showcase my skills and love for coding. Also get a chance to expand my knowledge and learn more about programming.
+                </p>
+              </h3>
           </p>
         </div>
           <p style="color: black; 
@@ -382,8 +387,10 @@
                         <ul>
                             <b>■ ONLINE BOOTCAMP</b>
                                 <p>
-                                  KodeGo PH (Globe Capital Ventures Holdings, Inc.)
-                                <br> Full Stack Web Development
+                                  <a href="https://kodego.ph/" target="_blank">
+                                     KodeGo PH (Globe Capital Ventures Holdings, Inc.)
+                                  </a>
+                                <br><u> Full Stack Web Development </u>
                                 <br> (February 2023-July 2023)
                                 <br> Bootcamp Award: 
                                 <br> <a href="https://youtu.be/Hq0qzBNZzQA" target="_blank"> 
@@ -507,28 +514,43 @@
            background-size: cover;
            background-position: center;
            background-repeat: no-repeat;
-           background-attachment: fixed;">
+           background-attachment: fixed;
+           margin-bottom: 250px;">
 <div>
   <h1 class="profileTitle" 
       style="margin-top: 30px;
-             margin-bottom: 20px;"> 
+             margin-bottom: 50px;"> 
     MY PROJECTS..  
   </h1>
 </div>
-  <div class="row row-cols-1 row-cols-md-4 g-3">
+  <div class="row row-cols-1 row-cols-md-2 g-3"
+       id="projectsQuery"
+       style="margin-left: 200px;
+              text-align: center;">
     <div class="col">
       <div class="cards">
         <img class="card-image" 
              src="https://ryecode.github.io/portfolio/ImageBank/RyePortfolioSS.jpeg">
         <div class="hover-container">
-            <p class="hover-header">Rye Portfolio</p>
+          <p class="hover-header"
+             style="opacity: 0;
+                    animation: scale 5s linear 0s forwards;
+                    animation-iteration-count: infinite;
+                    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+                    color: black;
+                    font-weight: 900;
+                    text-align: center;
+                    margin: 0px 0 0 0;
+                    width: 100%;">
+            Rye Portfolio
+          </p>
             <a class="hover-btn" 
                href="https://ryecode.github.io/portfolio/home" 
                target="_blank">
-              Visit
+              Visit Website
             </a>
             <p class="hover-description">
-              This is actually my first mini-project during our KodeGo bootcamp. I built the website purely with HTML, Bootstrap v5.3 and CSS. I had to admit this kind of website showed me what I need to improve, and that is content creation! hahaha! I really had a hard time thinking of what to write for my portfolio's contents... LOL~ 
+              This was my first mini-project during our KodeGo bootcamp. It's a single-page website which I built with HTML, Bootstrap v5.3 and CSS. I had to admit this kind of website showed me what I need to improve, and that is content creation! hahaha! I really had a hard time thinking of what to write for my portfolio's contents... LOL~ 
             </p>
         </div>
       </div>
@@ -538,17 +560,28 @@
         <img class="card-image" 
              src="https://ryecode.github.io/portfolio/ImageBank/EtiketSS.jpeg">
         <div class="hover-container">
-            <p class="hover-header">Etiket.com</p>
+          <p class="hover-header"
+             style="opacity: 0;
+                    animation: scale 5s linear 0s forwards;
+                    animation-iteration-count: infinite;
+                    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+                    color: black;
+                    font-weight: 900;
+                    text-align: center;
+                    margin: 0px 0 0 0;
+                    width: 100%;">
+            Etiket.com
+          </p>
             <a class="hover-btn" 
                href="https://etiket-com-mu.vercel.app/" 
                target="_blank">
-              Visit
+              Visit Website
             </a>
             <p class="hover-description">
-              This is our collaboration capstone project of Team IceCode during KodeGo bootcamp. It was built using React, Node, Express, MongoDB, Mongoose, some Bootstrap v5.3 and React Bootstrap v2.9.0 and old fashioned CSS. Then it was deployed using Vercel. 
+              For this project, I created the whole backend, the database implementation, and deployment of the website.
             <br> 
             <br>
-              For this project, I created the whole backend, the database implementation, and deployment of the website.
+              This is our collaboration capstone project of Team IceCode during KodeGo bootcamp. It was built using React, Node, Express, MongoDB, Mongoose, some Bootstrap v5.3 and React Bootstrap v2.9.0 and old fashioned CSS. Then it was deployed using Vercel. 
             </p>
         </div>
       </div>
@@ -558,11 +591,22 @@
         <img class="card-image" 
              src="https://ryecode.github.io/portfolio/ImageBank/RyeTicTacToeSS.jpeg">
         <div class="hover-container">
-            <p class="hover-header">Rye TicTacToe</p>
+          <p class="hover-header"
+             style="opacity: 0;
+                    animation: scale 5s linear 0s forwards;
+                    animation-iteration-count: infinite;
+                    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+                    color: black;
+                    font-weight: 900;
+                    text-align: center;
+                    margin: 0px 0 0 0;
+                    width: 100%;">
+               Rye TicTacToe
+            </p>
             <a class="hover-btn" 
                href="https://ryetictactoe.vercel.app/" 
                target="_blank">
-              Visit
+              Visit Website
             </a>
             <p class="hover-description">
               This is a mini game I created for my KodeGo technical exam. I built it purely with React and JavaScript. Then I deployed it using Vercel. I'm just very fond of this one because I figured out on my own most parts of the logic needed for it to work properly. And I'm planning to level up this game with more css effects, animations, and more functionability. 
@@ -577,11 +621,22 @@
              src="https://ryecode.github.io/portfolio/ImageBank/RYELogoV2.png"
              style="width: 40%;">
         <div class="hover-container">
-            <p class="hover-header">Rye cvhacker.com</p>
+          <p class="hover-header"
+             style="opacity: 0;
+                    animation: scale 5s linear 0s forwards;
+                    animation-iteration-count: infinite;
+                    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+                    color: black;
+                    font-weight: 900;
+                    text-align: center;
+                    margin: 0px 0 0 0;
+                    width: 100%;">
+            cvhacker.com
+          </p>
             <a class="hover-btn" 
                href="https://ryetictactoe.vercel.app/" 
                target="_blank">
-                Visit
+              Visit Website
             </a>
             <p class="hover-description">
               This is my secoond mini-project during the KodeGo  bootcamp. Unfortunately the github for this website was ruined and I decided to recreate a more advance version of it using React.
@@ -596,15 +651,20 @@
 
 
                                         <!-- CONTACT ME-->  
-<div class="card about" id="contactMe">
+<div class="card about" 
+     id="contactMe"
+     style="background-image: url('https://ryecode.github.io/portfolio/ImageBank/ContactBG.jpg');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-bottom: 0px;">
   <div>
-    <h1 class="aboutTitle" 
-        style="margin-top: 10px;"> 
-        CONTACT ME..  
+    <h1 class="aboutTitle"> 
+         CONTACT ME  
     </h1>
   </div>
-    <p style="color: aliceblue;">
-        Hover or Tap on the cards!
+    <p style="color: black;">
+        Hover or Tap on the cards and icons!
     </p>
   <div class="row" 
        style="margin: 10px 5px 10px -25px;
@@ -636,7 +696,7 @@
                     animation-iteration-count: initial; 
                     text-align: center; 
                     transform: translateX(-110%); 
-                    color: aliceblue; 
+                    color: black; 
                     margin-top: 10px;
                     z-index: 1;">
                       Download the PDF file 
@@ -645,7 +705,37 @@
                       </a>.
           </p>
     </div>    
-      <div class="col-sm-6" style="height: 400px;">
+      <div class="col-sm-6" 
+           style="height: 400px;
+                  z-index: 1;">
+    <div class="sub"
+        style="z-index: 1;
+               width: 80%;">
+       <a href="tel:+639179219988">
+         <img class="subscribe" 
+            src="https://ryecode.github.io/portfolio/ImageBank/phonePic.png" 
+            alt="phone icon"  
+            width="20%">
+       </a>
+       <a href="mailto:mr.ryan.corral@gmail.com">
+         <img class="subscribe" 
+            src="https://ryecode.github.io/portfolio/ImageBank/emailPic.png" 
+            alt="email icon"  
+            width="20%">
+       </a>
+       <a href="https://www.linkedin.com/in/rye-corral/" target="_blank">
+         <img class="subscribe" 
+            src="https://ryecode.github.io/portfolio/ImageBank/linkedPic.png" 
+            alt="linkedIn icon"  
+            width="25%">
+       </a>
+       <a href="https://www.facebook.com/ryekoralzkie" target="_blank">
+         <img class="subscribe" 
+            src="https://ryecode.github.io/portfolio/ImageBank/fbPic.png" 
+            alt="facebook icon"  
+            width="20%">
+       </a>
+    </div>
         <div class="card" 
              id="contactCardQuery"
              style="height: 350px; 
@@ -660,7 +750,7 @@
                alt="background image">  
           <p>
             <img id="cardQuery" 
-                 src="https://ryecode.github.io/portfolio/ImageBank/contactDetailsV2.png"
+                 src="https://ryecode.github.io/portfolio/ImageBank/contactDetails.png"
                  style="text-align: center;
                         margin-top: 35px;
                         width: 80%;
@@ -668,23 +758,7 @@
                         opacity: 1;">
           </p>
         </div>
-        <div class="sub">
-          <h1 style="margin-bottom: 10px;">
-            <input type="email" 
-                   class="form-control" 
-                   id="labels" 
-                   aria-describedby="emailHelp" 
-                   placeholder="Enter Your Email Address" 
-                   style="width: 60%;
-                          display:inline-block;
-                          margin: 0;">
-            <img class="btn" 
-                 id="subscribe" 
-                 src="https://ryecode.github.io/portfolio/ImageBank/Subscribe.png" 
-                 alt="Subscribe icon"  
-                 width="30%">
-          </h1>
-        </div>
+
       </div>
   </div>
   
@@ -695,12 +769,12 @@
 
                                         <!-- FOOTER -->
 <footer  id="footer">
-  <div class="copyright"> &#8592 © Ryan Corral 2023 	&#8594</div>
+  <div class="copyright"><img src="https://ryecode.github.io/portfolio/ImageBank/RYELogoV2.png" width="10%" >  © Ryan Corral 2023</div>
   <div class="row row-cols-2 row-cols-md-3 g-4" style="display: flex; align-items: start; justify-content: space-between;">
     <div class="attribute"> 
     Background images: <br><a href="http://www.pngtree.com" target="_blank">pngtree.com</a> & <a href="https://www.vecteezy.com/" target="_blank">vecteezy.com</a>
     </div>
-    <div id="back2Top">
+    <div class="back2TopQuery" id="back2Top">
       <button class="neon-button2"> <a href="#bookmark" style="text-decoration: none;color: rgb(255, 255, 255);"> Back to Top </a></button>
     </div>
 </div>
